--- a/entries/entry3/final/style.css
+++ b/entries/entry3/final/style.css
@@ -1,3 +1,61 @@
-h1 {
-	font-family: arial;
+.transit {font-family: "tangly-lines-symmetric", sans-serif;
+font-weight: 400;
+font-style: normal; font-size: 100pt; text-align: center; line-height: 1}
+
+h1 {font-family: "duende-pro", sans-serif;
+font-weight: 400;
+font-style: normal; 
+font-size: 120pt; 
+text-align: center;
+ line-height: 0.01}
+
+#more {text-align: left;}
+
+p {font-family: "miller-display", serif;
+font-weight: 400;
+font-style: normal; text-align:center;
+ font-size: 15pt;color: lightgrey;}
+
+h5 {font-family: "miller-display", serif;
+font-weight: 400;
+font-style: normal; text-align:center;
+ font-size: 25pt;}
+p2 {font-family: "miller-display", serif;
+font-weight: 400;
+font-style: normal; text-align:center;}
+
+p1 {text-align: center;}
+
+h2 {font-family: "miller-display", serif;
+font-weight: 400;
+font-style: normal; 
+text-align:center;
+font-size: 60pt}
+
+h4 {text-align: center; color: lightgrey;
+font-family: "miller-display", serif;
+font-weight: 300;
+font-style: normal; text-align:center;font-size: 15pt}
+
+body {background-color: black;
+color: floralwhite;}
+
+ .zigzag {
+    white-space: pre;
+  }
+  .zigzag span {
+    display: block;
+    padding-left: 30px;
+    text-align: center;
+    font-size: 20pt;
+     margin-right: 45pt;
+     color: lightgrey;
 }
+
+ .zigzag span:nth-child(odd) {
+    transform-origin: 0 0;
+    transform: rotate(-5deg);
+  }
+  .zigzag span:nth-child(even) {
+    transform-origin: 0 0;
+    transform: rotate(5deg);
