--- a/entries/entry3/final/style.css
+++ b/entries/entry3/final/style.css
@@ -42,6 +42,15 @@ color: floralwhite;}
 
  .zigzag {
     white-space: pre;
+    background-color: #f3ec78;
+    background-image: linear-gradient(45deg, #8480f9, #06044e);
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
+    
+}
   }
   .zigzag span {
     display: block;
