--- a/entries/entry4/final/style.css
+++ b/entries/entry4/final/style.css
@@ -16,7 +16,7 @@ body{background: floralwhite;}
   left: 120px;
   font-size: 100px;
   font-family: "seismic-latin-variable", sans-serif;
-font-variation-settings: "SEIS" 0, "wght" 458; color: darkred;
+font-variation-settings: "SEIS" 0, "wght" 458; color: #5A8397;
 transition: all 0.8s ease;
 
 }
@@ -26,19 +26,19 @@ transition: all 0.8s ease;
   right: 170px;
   font-size: 100px;
   font-family: "seismic-latin-variable", sans-serif;
-font-variation-settings: "SEIS" 0, "wght" 458; color: floralwhite;
+font-variation-settings: "SEIS" 0, "wght" 458; color: #5A8397;
 transition: all 0.8s ease;
 }
 
 .centered { 
-position: absolute;
+position: sticky;
   top: 850px;
   left: 40.5%;
   text-align: center;
   font-size: 100px;
   font-family: "seismic-latin-variable", sans-serif;
 font-variation-settings: "SEIS" 0, "wght" 458;
-color: darkred;
+color: #5A8397;
 transition: all 0.8s ease;
  }
 
@@ -68,32 +68,38 @@ font-variation-settings: "SEIS" 100, "wght" 458;
 
  .ttw{
   width: 100%;
-  height: 94.5vh;
+  height: 102vh;
   background: linear-gradient(
     to right,
     floralwhite 0%,
     floralwhite 50%,
-    darkred 50%,
-    darkred 100%
+    #03253a 50%,
+    #03253a 100%
   ) }
 
   .sub { font-family: "seismic-latin-variable", sans-serif;
-font-variation-settings: "SEIS" 0, "wght" 458; text-align: center; left: 41%; color: darkred;}
+font-variation-settings: "SEIS" 0, "wght" 458; text-align: center; left: 41%; color: #03253a; font-size: 20px}
 
 .scroll { font-family: "seismic-latin-variable", sans-serif; font-size: 800px; font-weight: 15;
-font-variation-settings: "SEIS" 0, "wght" 458; text-align: center; left: 41%; color: darkred; }
+font-variation-settings: "SEIS" 0, "wght" 458; text-align: center; left: 41%; color: #03253a; }
 
 .scroll:hover .text:hover;{ background-color: url("imgs/m9da147p2serbn988i6h4vsk0n.png");}
 
 
 summary{font-family: "seismic-latin-variable", sans-serif;
-font-variation-settings: "SEIS" 100, "wght" 458; font-size: 100px;
-color: darkred;}
+font-variation-settings: "SEIS" 100, "wght" 458; font-size: 50px;
+color: #03253a;}
 
 em {font-size: 20px;
   font-family: "seismic-latin-variable", sans-serif;
-font-variation-settings: "SEIS" 0, "wght" 458; color: darkred;}
+font-variation-settings: "SEIS" 0, "wght" 458; color: #5A8397;}
 
+::-moz-selection { background: whitesmoke; 
+                   color: darkorchid; opacity: 60%;}
+
+::selection { background: whitesmoke; 
+              color: darkorchid;
+              opacity: 60%;} 
 
 
 
