--- a/test/style.css
+++ b/test/style.css
@@ -1,4 +1,3 @@
-
 body {background-color: black;
 cursor: url('imgs/Subject 42.png'), auto;}
 
@@ -18,7 +17,17 @@ p {text-align: center; color: lavender; font-size: 20px;
   text-align:center;}
 
 
-
+ol {color: purple; display: flex;flex-direction:; 
+  flex-wrap: wrap-reverse;
+  justify-content: space-evenly; 
+  padding:100px;
+  min-height: 10px;
+  font-size:  16px;
+  text-align:  center;
+  min-width: 100px;
+  background-color: #9eb1e0;
+  opacity: 80%;
+ font-size: 20px}
 
 h1 {color: ghostwhite; text-align: center; font-size:100px;
     font-size: 100pt;
@@ -45,17 +54,13 @@ h1 {color: ghostwhite; text-align: center; font-size:100px;
          0 0 50px #7a2ce8, 0 0 60px #7a2ce8, 0 0 70px #7a2ce8, 0 0 80px #7a2ce8;
     }
 
-div { color: ghostwhite; }
+.div {
+    position: fixed;
+    text-align: left;
+    color: ghostwhite;
+     }
 
-img {z-index: 1}
-@media (max-width: 868px) {
-  body { background-color: black; } }
-
-    @media (max-width: 1200px) {
-  body { background-color: darkorchid;} }
-
-@media (max-width: 688px) {
-  body {  background-color: darkblue; } }
-
-
- 
+a {
+    color: white;
+    text-decoration: none; /* This removes the default underline style for links, you can omit it if you want underlined links */
+}
