--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ cursor: url('imgs/Subject 42.png'), auto;}
 
 p {text-align: center; color: lavender; font-size: 20px; 
   position: relative;
-  top: -70pt;
+  top: -50pt;
   font-family: "miller-display", serif;
   font-weight: 400;
   font-style: normal; 
@@ -20,14 +20,17 @@ p {text-align: center; color: lavender; font-size: 20px;
 
 
 
-h1 {color: ghostwhite; text-align: center; font-size:100px;
-    font-size: 100pt;
+h1 {color: ghostwhite; text-align: center; font-size:200px;
+    font-size: 170pt;
     font-family: "fabiola-capitals", sans-serif;
     font-weight: 400;
     font-style: normal;
     color: white;
     animation: glow 1s ease-in-out infinite alternate;
-    text-align: center;}
+    text-align: center;
+line-height: 90pt;
+}
+
 
     #tales {
     font-family: "fabiola-script", sans-serif;
@@ -45,7 +48,6 @@ h1 {color: ghostwhite; text-align: center; font-size:100px;
          0 0 50px #7a2ce8, 0 0 60px #7a2ce8, 0 0 70px #7a2ce8, 0 0 80px #7a2ce8;
     }
 
-div { color: ghostwhite; }
 
 img {z-index: 1}
 @media (max-width: 868px) {
