--- a/style.css
+++ b/style.css
@@ -48,6 +48,20 @@ line-height: 90pt;
          0 0 50px #7a2ce8, 0 0 60px #7a2ce8, 0 0 70px #7a2ce8, 0 0 80px #7a2ce8;
     }
 
+.moon-phases {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.moon-phase {
+    padding: 10px;
+    background-color: #f0f0f0;
+    border-radius: 5px;
+    text-align: center;
+    flex: 1;
+    margin: 5px;
+}
 
 img {z-index: 1}
 @media (max-width: 868px) {
