--- a/entries/entry2/final/style.css
+++ b/entries/entry2/final/style.css
@@ -1,3 +1,40 @@
+img {
+    width: 55px;
+                height: 75px;
+                position: fixed;
+                top: 65px;
+                left: 58%;
+
+
+}
+
+.cres { width: 72px;
+                height: 72px;
+                position: fixed;
+                top: 70px;
+                left: 37%;
+                 }
+
+a {color: #765ab8;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 12pt;
+    font-family: the-seasons, sans-serif;
+font-weight: 400;
+font-style: normal;
+position: fixed;
+
+top: 92px;
+left: 47%;
+
+    text-align: center;}
+
+}
+
+a:visited {
+    color: white; } 
+
+
 
 h1 {
     color: white;
@@ -10,7 +47,7 @@ h1 {
     line-height: 90pt;
     position: fixed;
     left: 50%;
-    top: 15%;
+    top: 18%;
     transform: translate(-50%, -50%);
     z-index: 1000;
 }
