--- a/entries/entry9/final/style.css
+++ b/entries/entry9/final/style.css
@@ -1,3 +1,39 @@
+.newmoon {
+    width: 100px;
+                height: 100px;
+                position: fixed;
+                top: -5px;
+                left: 37%;
+
+
+}
+
+.cres { width: 55px;
+                height: 65px;
+                position: fixed;
+                top: 11px;
+                left: 58%;
+                 }
+
+.hi {color: #765ab8;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 12pt;
+    font-family: the-seasons, sans-serif;
+font-weight: 400;
+font-style: normal;
+position: fixed;
+
+top: 32px;
+left: 47%;
+
+    text-align: center;}
+
+}
+
+.hi:visited {
+    color: white; } 
+
 body {
     font-family: "Arial", sans-serif;
     margin: 0;
