--- a/entries/entry1/final/style.css
+++ b/entries/entry1/final/style.css
@@ -1,4 +1,38 @@
+img {
+    width: 120px;
+                height: 120px;
+                position: fixed;
+                top: -17px;
+                left: 35%;
 
+
+}
+
+.cres { width: 70px;
+                height: 70px;
+                position: fixed;
+                top: 7px;
+                left: 58%;
+                 }
+
+a {color: #765ab8;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 12pt;
+    font-family: the-seasons, sans-serif;
+font-weight: 400;
+font-style: normal;
+position: fixed;
+
+top: 32px;
+left: 47%;
+
+    text-align: center;}
+
+}
+
+a:visited {
+    color: white; } 
 
 
 body {
@@ -34,7 +68,7 @@ h1 {
     line-height: 90pt;
     position: fixed;
     left: 50%;
-    top: 10%;
+    top: 11%;
     transform: translate(-50%, -50%);
     z-index: 1000;
 }
