--- a/entries/entry3/final/style.css
+++ b/entries/entry3/final/style.css
@@ -1,3 +1,43 @@
+
+
+img {
+    width: 60px;
+                height: 80px;
+                position: fixed;
+                top: 5px;
+                left: 38%;
+
+
+}
+
+.cres { width: 60px;
+                height: 70px;
+                position: fixed;
+                top: 7px;
+                left: 58%;
+                 }
+
+a {color: #765ab8;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 12pt;
+    font-family: the-seasons, sans-serif;
+font-weight: 400;
+font-style: normal;
+position: fixed;
+
+top: 32px;
+left: 47%;
+
+    text-align: center;}
+
+}
+
+a:visited {
+    color: white; } 
+
+
+
 .transit {font-family: "tangly-lines-symmetric", sans-serif;
 font-weight: 400;
 font-style: normal; font-size: 100pt; text-align: center; line-height: 1;
@@ -28,7 +68,7 @@ h1 {
     line-height: 90pt;
     position: fixed;
     left: 50%;
-    top: 10%;
+    top: 12%;
     transform: translate(-50%, -50%);
     z-index: 1000;
 }
