--- a/entries/entry6/final/style.css
+++ b/entries/entry6/final/style.css
@@ -1,4 +1,38 @@
+.newmoon {
+    width: 58px;
+                height: 68px;
+                position: fixed;
+                top: 12px;
+                left: 37%;
 
+
+}
+
+.cres { width: 60px;
+                height: 70px;
+                position: fixed;
+                top: 9px;
+                left: 58%;
+                 }
+
+.hi {color: #765ab8;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 12pt;
+    font-family: the-seasons, sans-serif;
+font-weight: 400;
+font-style: normal;
+position: fixed;
+
+top: 32px;
+left: 47%;
+
+    text-align: center;}
+
+}
+
+.hi:visited {
+    color: white; } 
 
 body {
     font-family: "Arial", sans-serif;
@@ -232,9 +266,10 @@ top: -1850px;
 
 
 button {
-  max-width: 150px;
-  max-height: 1000 px;
-   align-content: center;
+    
+max-width: 150px;
+max-height: 1000 px;
+align-content: center;
 scale: 510%;
 position: relative;
 top: -2300px;
@@ -247,7 +282,7 @@ opacity: 80%;
 font-size: 8px;
 background-color: transparent;
 border: 1.5px dotted #9977d8; /* Border properties */
-            border-radius: 10px;
+border-radius: 10px;
 
 }
 
