--- a/entries/entry7/final/style.css
+++ b/entries/entry7/final/style.css
@@ -1,3 +1,40 @@
+img {
+    width: 60px;
+                height: 70px;
+                position: fixed;
+                top: 8px;
+                left: 37%;
+
+
+}
+
+.cres { width: 70px;
+                height: 70px;
+                position: fixed;
+                top: 7px;
+                left: 59%;
+                 }
+
+a {color: #765ab8;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 12pt;
+    font-family: the-seasons, sans-serif;
+font-weight: 400;
+font-style: normal;
+position: fixed;
+
+top: 32px;
+left: 47%;
+
+    text-align: center;}
+
+}
+
+a:visited {
+    color: white; } 
+
+
 body {
     cursor: url('imgs/Subject 42.png'), auto;
     background-color: black;
