--- a/entries/entry8/final/style.css
+++ b/entries/entry8/final/style.css
@@ -15,6 +15,46 @@ body {
     color: rgba(139, 0, 139, 0.6);
 }
 
+.newmoon {
+    width: 110px;
+                height: 110px;
+                position: fixed;
+                top: -10px;
+                left: 58%;
+               opacity: 0%;
+               z-index: 100000;
+
+
+}
+
+.cres { width: 60px;
+                height: 70px;
+                position: fixed;
+                top: 9px;
+                left: 37%;
+                opacity: 0%;
+                z-index: 100000;
+                 }
+
+.hi {color: #765ab8;
+    text-decoration: underline;
+    text-align: center;
+    font-size: 12pt;
+    font-family: the-seasons, sans-serif;
+font-weight: 400;
+font-style: normal;
+position: fixed;
+
+top: 32px;
+left: 47%;
+opacity: 0%;
+z-index: 10000;
+    text-align: center;}
+
+}
+
+.hi:visited {
+    color: white; } 
 
 
 h1 {
@@ -28,7 +68,7 @@ h1 {
     line-height: 90pt;
     position: fixed;
     left: 50%;
-    top: 10%;
+    top: 12%;
     transform: translate(-50%, -50%);
     z-index: 1000;
 }
@@ -153,11 +193,23 @@ line-height: 20px;
     background-color: #555;
 }
 
+.dark-mode .hi {
+    opacity: 100%;
+}
+
+.dark-mode .newmoon{
+    opacity: 100%;
+}
+
+.dark-mode .cres{ 
+    opacity: 100%;
+}
 
 
 .dark-mode {
     background-color: #111;
     color: #fff;
+    opacity: 100%;
 }
 
 
